--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>PRO-INF</title>
   <base href="/">
   <!--Import Google Icon Font-->
-
+  <style>
+    .navbar-fixed {
+    visibility: hidden;
+  }
+  </style>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/footer/logo-proinf.png">
